--- a/views/addpage.ejs
+++ b/views/addpage.ejs
@@ -13,7 +13,13 @@
 
 
 
+        Song Name: <input type="text" name="SongName" required/>
+        Artist Name: <input type="text" name="ArtistName" required/>
+        URL: <input type="url" name="URL" required/>
+        Song Review: <input type="text" name="SongReview" required/>
         Added by: <input type="text" name="addedBy" value="<%=loginName%>" readonly/>
+        
+    
 
         <button class="btn" type="submit" name="submit">Save Item</button>
 
