--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,5 +1,5 @@
 </main>
-<footer class="page-footer">
+<footer class="page-footer cyan accent-1 ">
   <div class="footer-copyright">
     <div class="container">
     <span class="white-text">Created at Code Samurai Hackathon 2019</span>
