--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,5 +1,5 @@
 <header>
-    <nav>
+    <nav class="cyan accent-1">
         <a href="/" class="brand-logo center">
             <i class="material-icons">library_music</i>My Cool Music  Trending App
         </a>
